// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should render with border 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-990v33-0 iJGVRV"
        data-testid="TableRow"
      >
        <td
          class="border-gray-lightest border"
        >
          <div
            class="TableCell__TableCellInnerWrapper-l6uokn-0 dwniYi"
          >
            something
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TableRow should render without border 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-990v33-0 cGVoQL"
        data-testid="TableRow"
      >
        <td
          class="border-gray-lightest border"
        >
          <div
            class="TableCell__TableCellInnerWrapper-l6uokn-0 dwniYi"
          >
            something
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
